--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="about_container bd-grid">
                 <div class="about_data">
                     <p class="about_description">
-                        Hello All, This is JINAL MAKHIJANI.Currently I am studying Computer engineering at government engineering college,Gandhinagar.I am front end Webdeveloper.I know html,css,javascript, and reactjs.My primary goal is to follow my passion in web development.
+                        Hello All, This is JINAL MAKHIJANI.Currently I am studying Computer engineering at hashmukh goswami college of engineering,vahelal.I am front end Webdeveloper.I know html,css,javascript, and reactjs.My primary goal is to follow my passion in web development.
                     </p>
                     <img src="profile(1).png" alt="profile" class="about_img">
                 </div>
